# cs225a_project

./: CMakeLists.txt  README.md
model/chess/meshes/visual/: B.mtl  Board.mtl  W.mtl
project/: CMakeLists.txt  chess_script.py  controller.cpp  redis_keys.h  simviz.cpp
project/data_files/: question_1a.txt  question_1c.txt  question_2d.txt  question_2e.txt  question_2f.txt  question_2g.txt  question_3.txt  question_4a.txt  question_4b.txt
project/python/: URDF Maker.py
project/python/stockfish_15_linux_x64/stockfish_15_src/src/: .depend
python/aruco/: board_estimation.py  calibration_matrix.npy  distortion_coefficients.npy  pose_estimation.py
